--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,14 +16,6 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Volt React Dashboard is a free and open source admin dashboard template powered by React.js and Bootstrap 5 featuring over 100 UI elements, plugins, and example pages." />
 
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://demo.themesberg.com/volt-react-dashboard">
-  <meta property="twitter:title" content="Volt React Dashboard">
-  <meta property="twitter:description" content="Volt React Dashboard is a free and open source admin dashboard template powered by React.js and Bootstrap 5 featuring over 100 UI elements, plugins, and example pages.">
-  <meta property="twitter:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-react-dashboard/thumbnail.png">
-
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -58,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Volt React Dashboard</title>
+  <title>Voltage | Gerenciador de Investimentos</title>
 </head>
 
 <body>
