Adding error msg in login screen, creating logical to sell and reinvest in Renda Fixa and Tesouro Direto

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Volt React Dashboard is a free and open source admin dashboard template powered by React.js and Bootstrap 5 featuring over 100 UI elements, plugins, and example pages." />
+  <meta name="description" content="Voltage | Gerencie sua carteira, visualize gráficos e baixe relatórios. Aumente sua acertividade nos investimentos." />
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
